--- a/app/views/static/login.html.erb
+++ b/app/views/static/login.html.erb
@@ -2,16 +2,16 @@
   <h2>Log in to Mike</h2>
   
   <div class="login-content">
-    <form role="form">
+    <%= form_tag session_index_path, role: 'form' do %>
       <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+        <label for="login">Email address</label>
+        <%= text_field_tag :login, nil, type: 'email', class: 'form-control', placeholder: 'Enter email' %>
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="password">Password</label>
+        <%= text_field_tag :password, nil, type: 'password', class: 'form-control', placeholder: 'Password' %>
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    <% end %>
   </div>
 </div>
